<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewActivity">
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtname"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_below="@id/name"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_below="@id/pass"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/viewname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/name"
        android:layout_marginLeft="70dp"

        />
    <TextView
        android:id="@+id/viewpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:layout_toRightOf="@id/pass"
        android:layout_below="@id/viewname"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"/>
    <TextView
        android:id="@+id/viewaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:layout_toRightOf="@id/address"
        android:layout_below="@id/viewpass"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"/>
    <Button
        android:id="@+id/btnLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:layout_alignParentBottom="true"
        android:onClick="load"
        />
    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/btnLoad"
        android:onClick="Exit"
        />

</RelativeLayout>