<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/txtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtname"
        />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtname"
        android:text="@string/pass"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:text="@string/address"
        android:layout_marginTop="40dp"/>

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/nameInput"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="64dp"
        android:layout_toRightOf="@id/txtname"
        />

    <EditText
        android:id="@+id/passInput"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/txtname"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:layout_toRightOf="@id/pass"
        />

    <EditText
        android:id="@+id/addressInput"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/passInput"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="36dp"
        android:layout_toRightOf="@id/address" />



    <Button

        android:id="@+id/btnSave"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="save"/>
    <Button
        android:id="@+id/btnClear"
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/btnSave"
        android:onClick="clear"/>
    <Button
        android:id="@+id/btnNext"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/btnClear"
        android:onClick="next"/>

</RelativeLayout>